# ilr

./: CMakeLists.txt  LICENSE  README.md
cmake/: tests.cmake
code/: README.md
code/include/ilr/: module.h  type.h
code/src/: CMakeLists.txt  instruction.c  instruction_private.h  module.c  type.c  variable_int.c  variable_int.h
code/test/: CMakeLists.txt  types.c  varint.c
code/test/util/: CMakeLists.txt  check.h
core/: CMakeLists.txt
core/cmake/: tests.cmake
core/include/ILR/: Instruction.h  Module.h
core/include/ILR-core/: instructions.h  module.h
core/include/ilr/: instruction.h  module.h  type.h
core/src/: CMakeLists.txt  ilr_private.h  instruction.c  instruction_private.h  module.c  module_private.h  type.c  type_private.h
core/test/: CMakeLists.txt  empty_module.c  instructions.c  instructions.cpp  module.cpp  types.c
core/test/util/: CMakeLists.txt  check.c
cxx/: CMakeLists.txt
cxx/include/ilr/: Module.h  Type.h
cxx/src/: CMakeLists.txt  Module.cpp  Type.cpp
cxx/test/: CMakeLists.txt  module.cpp  type.cpp
cxx/test/include/mock/: ilr.h  module.h  snapshot.h  type.h
cxx/test/include/test/: verify.h
cxx/test/util/: CMakeLists.txt  mock-module.cpp  mock-type.cpp  verify.cpp
